map not transfering

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,14 @@
  *= require_tree .
  *= require_self
  */
+
+.stately {
+    width: 300px;     /* width and font size must match */
+    font-size: 300px; /*width and font size must match */
+    color: #f0f0f0;
+}
+.stately .va,
+.stately .md,
+.stately .dc {
+    color: #FF0000;
+}
