--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,56 @@
-<link rel="stylesheet" href="/stately/stately.css">
-<h2>Map</h2>
-<ul class="stately">
+<h1>Exercise one</h1>
+<h2>Fix me..... </h2>
+<h3>Things to do:</h3>
+<ul>
+  <li>Change the rollover color to red</li>
+  <li>Change the background color to black</li>
+  <li>Enable the zoom capability</li>
+</ul>
+
+<div id="mapdiv" style="margin-left: auto; margin-right: auto; width: 90%;; height: 450px;"></div>​
+<script src="http://www.amcharts.com/lib/3/ammap.js" type="text/javascript"></script>
+<script src="http://www.amcharts.com/lib/3/maps/js/usaHigh.js" type="text/javascript"></script>
+<div id="map"></div>
+<script type="text/javascript">
+  var map;
+  AmCharts.ready(function() {
+    map                  = new AmCharts.AmMap();
+    map.pathToImages     = "http://www.amcharts.com/lib/3/images/";
+    map.panEventsEnabled = true;
+    map.backgroundColor  = "#535364";
+    map.backgroundAlpha  = 1;
+    map.zoomControl.panControlEnabled  = false;
+    map.zoomControl.zoomControlEnabled = false;
+    var dataProvider     = {
+      mapVar          : AmCharts.maps.usaHigh,
+      getAreasFromMap : true,
+      areas           : [
+      ]
+    };
+    map.dataProvider     = dataProvider;
+    map.areasSettings    = {
+      autoZoom             : true,
+      color                : "#CDCDCD",
+      colorSolid           : "#5EB7DE",
+      selectedColor        : "#5EB7DE",
+      outlineColor         : "#666666",
+      rollOverColor        : "#88CAE7",
+      rollOverOutlineColor : "#FFFFFF"
+    };
+    map.write("mapdiv");
+  });
+</script>
+
+<h1>Exercise 2</h1>
+<h3> Your travel map</h3>
+<h3>Things to do:</h3>
+<ul>
+  <li>Purple all the states you have been to</li>
+  <li>Yellow all the states you plan to go to</li>
+  <li>Teal the state your parents were born at were born at</li>
+  <li>Set the alaska state flag as the background for alaska</li>
+</ul>
+<ul class="stately" >
   <li data-state="al" id="al">A</li>
   <li data-state="ak" id="ak">B</li>
   <li data-state="ar" id="ar">C</li>
