Move script to application.js

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,34 +12,7 @@
 <script src="http://www.amcharts.com/lib/3/maps/js/usaHigh.js" type="text/javascript"></script>
 <div id="map"></div>
 <script type="text/javascript">
-  var map;
-  AmCharts.ready(function() {
-    map                  = new AmCharts.AmMap();
-    map.pathToImages     = "http://www.amcharts.com/lib/3/images/";
-    map.panEventsEnabled = true;
-    map.backgroundColor  = "#535364";
-    map.backgroundAlpha  = 1;
-    map.zoomControl.panControlEnabled  = false;
-    map.zoomControl.zoomControlEnabled = false;
-    var dataProvider     = {
-      mapVar          : AmCharts.maps.usaHigh,
-      getAreasFromMap : true,
-      areas           : [
-      ]
-    };
-    map.dataProvider     = dataProvider;
-    map.areasSettings    = {
-      autoZoom             : true,
-      color                : "#CDCDCD",
-      colorSolid           : "#5EB7DE",
-      selectedColor        : "#5EB7DE",
-      outlineColor         : "#666666",
-      rollOverColor        : "#88CAE7",
-      rollOverOutlineColor : "#FFFFFF"
-    };
-    map.write("mapdiv");
-  });
-</script>
+  /script>
 
 <h1>Exercise 2</h1>
 <h3> Your travel map</h3>
