Move libraries to application layout

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,9 +7,7 @@
   <li>Enable the zoom capability</li>
 </ul>
 
-<div id="mapdiv" style="margin-left: auto; margin-right: auto; width: 90%;; height: 450px;"></div>​
-<script src="http://www.amcharts.com/lib/3/ammap.js" type="text/javascript"></script>
-<script src="http://www.amcharts.com/lib/3/maps/js/usaHigh.js" type="text/javascript"></script>
+<div id="mapdiv" style="margin-left: auto; margin-right: auto; width: 90%;; height: 450px;"></div>
 <div id="map"></div>
 
 <h1>Exercise 2</h1>
