--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
 <head>
   <title>MapWarmup</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <script src="http://www.amcharts.com/lib/3/ammap.js" type="text/javascript"></script>
+  <script src="http://www.amcharts.com/lib/3/maps/js/usaHigh.js" type="text/javascript"></script>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
